# Leitura-Automatica-DWG

./: .env.example  .gitignore  README.md  TEST_PLAN.md  docker-compose.yml  melhorias-v2.md  melhorias.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  billing.py  block_mappings.py  blocks.py  projects.py  upload.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: block_cache.py  block_mapping.py  payment.py  project.py  user.py
backend/app/schemas/: auth.py  billing.py  block_mapping.py  project.py
backend/app/services/: ai_block_resolver.py  asaas_client.py  dwg_converter.py  dxf_parser.py  excel_exporter.py  storage.py  takeoff_engine.py  usage_limits.py
backend/app/utils/: block_dictionary.py  layers.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/mappings/: page.tsx
frontend/src/app/dashboard/upload/: page.tsx
frontend/src/app/qa/: page.tsx
frontend/src/components/: dashboard-shell.tsx  plan-usage-card.tsx  projects-table.tsx  providers.tsx  upload-wizard.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/src/context/: auth-context.tsx
frontend/src/lib/: api-client.ts  config.ts  types.ts
(+2 files in other folders)
